Add Pages: donut, laptop_project_new, ulmo_project, update all pages contents, add donut picture

--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,16 @@
-.projects{
+.projects {
     display: flex;
     flex-wrap: wrap;
 }
 
-.itemProject{
+.itemProject {
     display: flex;
 }
+
+.plang_php {}
+
+.plang_jvs {}
+
+.plang_kotlin {}
+
+.plang_flutter {}
