--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,88 @@
+.personal_info {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 50px;
+    column-gap: 20px;
+}
+
+.personal_info_row {
+    display: flex;
+    justify-content: space-between;
+    border-bottom: 1px solid black;
+    column-gap: 16px;
+    transition: 500ms;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+.personal_info_row:hover {
+    transition: 500ms;
+    background-color: #27ba4e;
+}
+
+.personal_info_row p {
+    width: 50%;
+}
+
 .projects {
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-around;
+    gap: 16px;
+
 }
 
-.itemProject {
+.project_item {
     display: flex;
+    border-radius: 8px;
+    border: 1px solid black;
+    padding: 8px;
+    background-color: #e1f2e6;
+}
+
+.project_row {
+    display: flex;
+    justify-content: space-between;
+    border-bottom: 1px solid black;
+}
+
+.project_row p{
+    flex:1
+}
+
+.img_cover {
+    object-fit: cover;
+    border-radius: 8px;
+    border: 1px solid black;
+    margin-right: 12px;
+}
+
+
+
+
+h1 {
+    color: darkblue;
+}
+
+.button_project {
+    text-decoration: none;
+    background-color: green;
+    color: white;
+    padding: 10px 14px 10px 14px;
+    border-radius: 4px;
+    transition: 500ms;
+}
+
+.button_project:hover {
+    background-color: #27ba4e;
+    transition: 500ms;
+}
+
+p,
+h1,
+a {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .plang_php {}
