--- a/styles/styles.css
+++ b/styles/styles.css
@@ -61,7 +61,7 @@
 
 
 
-h1 {
+h1,h2 {
     color: darkblue;
 }
 
@@ -81,6 +81,7 @@ h1 {
 
 p,
 h1,
+h2,
 a {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
