--- a/styles/styles.css
+++ b/styles/styles.css
@@ -58,7 +58,16 @@
     margin-right: 12px;
 }
 
+.hobbies{
+    width: 40%;
+    padding: 12px;
+    border: 1px solid black;
+    margin-bottom: 40px;
+}
 
+.hobbies img {
+    width: 100%;
+}
 
 
 h1,h2 {
@@ -85,11 +94,3 @@ h2,
 a {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
-
-.plang_php {}
-
-.plang_jvs {}
-
-.plang_kotlin {}
-
-.plang_flutter {}
