--- a/styles/styles.css
+++ b/styles/styles.css
@@ -139,6 +139,20 @@ nav a:hover {
     width: 100%;
 }
 
+.completed {
+    color: #27ba4e;
+    font-weight: bold;
+}
+
+.ongoing {
+    color: yellow;
+    font-weight: bold;
+}
+
+.dropped {
+    color: red;
+    font-weight: bold;
+}
 
 h1,
 h2 {
@@ -146,11 +160,14 @@ h2 {
     margin-bottom: 8px;
 }
 
-
-
 p,
 h1,
 h2,
 a {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+li{
+    padding-top: 8px;
+    padding-bottom: 8px;
 }
