--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,6 @@
 * {
-    margin: 0
+    margin: 0;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 main{
@@ -99,7 +100,7 @@ nav a:hover {
     border-bottom: 1px solid black;
 }
 
-.project_row p {
+.project_row * {
     flex: 1
 }
 
@@ -158,13 +159,6 @@ h1,
 h2 {
     color: darkblue;
     margin-bottom: 8px;
-}
-
-p,
-h1,
-h2,
-a {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 li{
