--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,7 +3,7 @@
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-main{
+main {
     padding-left: 16px;
     padding-right: 16px;
 }
@@ -90,8 +90,10 @@ nav a:hover {
     width: 30%;
 }
 
-.project_item_info{
-    display: flex; flex-direction: column; justify-content: space-between;
+.project_item_info {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .project_row {
@@ -141,14 +143,14 @@ nav a:hover {
 }
 
 
-.header_project{
+.header_project {
     display: flex;
     align-items: center;
     background-color: #e1f2e6;
     margin-bottom: 20px;
 }
 
-.header_project a{
+.header_project a {
     border: 1px solid black;
     background-color: #27ba4e;
     padding: 4px;
@@ -158,7 +160,7 @@ nav a:hover {
     transition: 500ms;
 }
 
-.header_project a:hover{
+.header_project a:hover {
     background-color: white;
     transition: 500ms;
 }
@@ -184,13 +186,24 @@ nav a:hover {
     font-weight: bold;
 }
 
+.screenshots {
+    display: flex;
+    justify-content: space-around;
+    margin-bottom: 20px;
+}
+
+.screenshots img {
+    border: 1px solid black;
+    border-radius: 4px;
+}
+
 h1,
 h2 {
     color: darkblue;
     margin-bottom: 8px;
 }
 
-li{
+li {
     padding-top: 8px;
     padding-bottom: 8px;
 }
