--- a/styles/styles.css
+++ b/styles/styles.css
@@ -60,8 +60,7 @@ nav a:hover {
     border-bottom: 1px solid black;
     column-gap: 16px;
     transition: 500ms;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding:5px 20px;
 }
 
 .personal_info_row:hover {
@@ -197,7 +196,12 @@ nav a:hover {
     border-radius: 4px;
 }
 
-h1,
+h1 {
+    color: darkblue;
+    margin-bottom: 20px;
+    margin-top: 40px;
+}
+
 h2 {
     color: darkblue;
     margin-bottom: 8px;
